--- a/wp-content/themes/livecomplete/woocommerce.css
+++ b/wp-content/themes/livecomplete/woocommerce.css
@@ -1600,7 +1600,6 @@ table.woocommerce-checkout-review-order-table th {
 
 
 .category-custom-header {
-    padding: 2em 0;
     margin-bottom: 2em;
     text-align: center;
 }
